After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629965 - dbus: Don't return [ undefined ] when parsing an empty list of values
dbus: Don't return [ undefined ] when parsing an empty list of values
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2010-09-17 23:09 UTC by Johan Bilien
Modified: 2010-09-17 23:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dbus: Don't return [ undefined ] when parsing an empty list of values (1.69 KB, patch)
2010-09-17 23:09 UTC, Johan Bilien
committed Details | Review

Description Johan Bilien 2010-09-17 23:09:46 UTC
instead return []

This is a problem for asynchronously implemented methods with an empty
in-signature. Without the fix they are called with
methodAsync(undefined, dbusCallback) instead of the expected
methodAsync(dbusCallback);
Comment 1 Johan Bilien 2010-09-17 23:09:48 UTC
Created attachment 170522 [details] [review]
dbus: Don't return [ undefined ] when parsing an empty list of values
Comment 2 Havoc Pennington 2010-09-17 23:14:09 UTC
Review of attachment 170522 [details] [review]:

Looks good.