dbus: Don't return [ undefined ] when parsing an empty list of values

instead return []

This is a problem for asynchronously implemented methods with an empty
in-signature. Without the fix they are called with
methodAsync(undefined, dbusCallback) instead of the expected
methodAsync(dbusCallback);

https://bugzilla.gnome.org/show_bug.cgi?id=629965